[package]
name = "nanogate"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
time = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rand = "0.8"
[[bench]]
name = "gate_bench"
harness = false